--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,13 +1,9 @@
 version: "2"
 
+conda:
+  environment: environment.yml
+
 build:
-  os: "ubuntu-22.04"
+  os: "ubuntu-20.04"
   tools:
-    python: "3.10"
-
-python:
-  install:
-    - requirements: docs/requirements.txt
-
-sphinx:
-  configuration: docs/source/conf.py
+    python: "mambaforge-latest"
