--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -9,5 +9,5 @@ build:
     python: "mambaforge-latest"
   jobs:
     post_create_environment:
-      - micromamba info
-      - micromamba list
+      - mamba info
+      - mamba list
